# maya-dem-bones

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  QuickBuild.bat  QuickBuildWheel.bat  README.md  build_core.bat  create_vs_sln.bat  detect_maya.bat  setup.py  setup_prebuilt.py
.claude/: settings.local.json
Release/: dem_bones-1.0.0-cp27-none-win_amd64.whl  dem_bones-1.0.0-cp37-cp37m-win_amd64.whl
example/: GenerateFromSelection.py  MayaAPI_CreateJoints.py  face.py  face_no_skinned.ma
src/: Py_MString.h  main.cpp  utils.h
src/dem_bones/: MayaAPI_CreateJoints.py  _core.pyi  dem_bones_ui.py  gen_stub.py
